Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-43708

AddressSanitizer: heap-use-after-free in Collections::Manager::applyNewManifest during Disk Autofailover test

    XMLWordPrintable

Details

    Description

      Script to repo:

      failover.DiskFailoverTests.DiskAutofailoverTests.test_rebalance_after_disk_autofailover,timeout=5,num_node_failures=1,nodes_in=0,nodes_out=1,failover_action=disk_failure,nodes_init=5,disk_timeout=15,bucket_spec=single_bucket.buckets_all_membase_for_rebalance_tests_more_collections,data_load_spec=volume_test_load_with_CRUD_on_collections,GROUP=luks'
      

      The test starts a cluster of 5 nodes
      2021-01-17 23:58:26,154 | test | INFO | pool-1-thread-13 | [table_view:display:72] Rebalance Overview
      ------------------------------------

      Nodes Services Status

      ------------------------------------

      172.23.105.215 kv Cluster node
      172.23.105.217 None <--- IN —
      172.23.105.219 None <--- IN —
      172.23.105.220 None <--- IN —
      172.23.106.237 None <--- IN —

      ------------------------------------
      and induces disk failure on 217 and fails it over

      2021-01-18 00:00:15,372 | test  | ERROR   | pool-1-thread-22 | [rest_client:print_UI_logs:2595] {u'code': 0, u'module': u'ns_orchestrator', u'type': u'info', u'node': u'ns_1@172.23.105.215', u'tstamp': 1610956815272L, u'shortText': u'message', u'serverTime': u'2021-01-18T00:00:15.272Z', u'text': u"Starting failover of nodes ['ns_1@172.23.105.217']. Operation Id = 1bc5993a1b6df9884b6014af1a9dd1ed"}
      

      coredump observed on .217 node
      bt_full and info_threads attached.

      Attachments

        1. sanitizers.log.memcached.53224
          9 kB
        2. info_threads.txt
          2 kB
        3. bt_full.txt
          4 kB
        4. bt_full_all_threads.txt
          112 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sumedh.basarkod Sumedh Basarkod (Inactive)
            sumedh.basarkod Sumedh Basarkod (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty